--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "electron/main.cjs",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -14,7 +15,32 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
-    "test:e2e:chrome": "playwright test --project=chromium --headed"
+    "test:e2e:chrome": "playwright test --project=chromium --headed",
+    "electron": "wait-on tcp:3000 && electron .",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"npm run electron\"",
+    "electron:build": "npm run build && electron-builder"
+  },
+  "build": {
+    "appId": "com.ksfoundation.space",
+    "productName": "KSFoundation",
+    "directories": {
+      "output": "dist_electron"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "mac": {
+      "category": "public.app-category.productivity",
+      "icon": "public/logo.png"
+    },
+    "win": {
+      "icon": "public/logo.png"
+    },
+    "linux": {
+      "icon": "public/logo.png"
+    }
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
